testsuite/bsc.typechecker/typeclasses/ATFInInstHeadSynonymElsewhere.bs.bsc-out.expected
checking package dependencies
compiling ATFInInstHeadSynonymElsewhere.bs
Error: "ATFInInstHeadSynonymElsewhere.bs", line 20, column 22: (T0156)
  Type function `ATFInInstHeadSynonymElsewhere.Elem' cannot be used in an
  instance head
